// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvailabilityContainer Should allow for the menu to be closed and opened 1`] = `
<div>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      onClick={[Function]}
      options={
        Array [
          "Monday",
          "Tuesday",
          "Wednesday",
          "Thursday",
          "Friday",
        ]
      }
      placeholder="Select day"
    />
  </td>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
        ]
      }
      placeholder="Select start hour"
    />
  </td>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          0,
          5,
          10,
          15,
          20,
          25,
          30,
          35,
          40,
          45,
          50,
          55,
        ]
      }
      placeholder="Select start minute"
    />
  </td>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
        ]
      }
      placeholder="Select end hour"
    />
  </td>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          0,
          5,
          10,
          15,
          20,
          25,
          30,
          35,
          40,
          45,
          50,
          55,
        ]
      }
      placeholder="Select end minute"
    />
  </td>
  <td>
    <button
      onClick={[Function]}
    >
      Add
    </button>
  </td>
  <div>
    <ReactDataGrid
      cellNavigationMode="none"
      columnEquality={[Function]}
      columns={
        Array [
          Object {
            "key": "number",
            "name": "ID",
          },
          Object {
            "key": "Day",
            "name": "Day",
          },
          Object {
            "key": "StartHour",
            "name": "Start Hour",
          },
          Object {
            "key": "StartMin",
            "name": "Start Minute",
          },
          Object {
            "key": "EndHour",
            "name": "End Hour",
          },
          Object {
            "key": "EndMin",
            "name": "End Minute",
          },
        ]
      }
      editorPortalTarget={<body />}
      enableCellAutoFocus={true}
      enableCellSelect={false}
      enableRowSelect={false}
      headerFiltersHeight={45}
      minColumnWidth={80}
      minHeight={350}
      onBeforeEdit={[Function]}
      overScan={
        Object {
          "colsEnd": 2,
          "colsStart": 2,
          "rowsEnd": 2,
          "rowsStart": 2,
        }
      }
      rowGetter={[Function]}
      rowHeight={35}
      rowKey="id"
      rowScrollTimeout={0}
      rowsCount={0}
      scrollToRowIndex={0}
    />
  </div>
  <div>
    <td>
      <input
        onChange={[Function]}
        type="number"
        value={null}
      />
    </td>
    <td>
      <button
        onClick={[Function]}
      >
        Remove Constraint
      </button>
    </td>
  </div>
  <div
    className="bottom"
    id="option-container"
  >
    <Link
      replace={false}
      to="/"
    >
      <button
        id="save"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </Link>
    <Link
      refresh="true"
      replace={false}
      to="/availability"
    >
      <button
        type="reset"
      >
        Reset
      </button>
    </Link>
    <button
      onClick={[Function]}
    >
      Additional Options
    </button>
  </div>
</div>
`;

exports[`AvailabilityContainer Should allow for the menu to be closed and opened 2`] = `
<div>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      onClick={[Function]}
      options={
        Array [
          "Monday",
          "Tuesday",
          "Wednesday",
          "Thursday",
          "Friday",
        ]
      }
      placeholder="Select day"
    />
  </td>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
        ]
      }
      placeholder="Select start hour"
    />
  </td>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          0,
          5,
          10,
          15,
          20,
          25,
          30,
          35,
          40,
          45,
          50,
          55,
        ]
      }
      placeholder="Select start minute"
    />
  </td>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
        ]
      }
      placeholder="Select end hour"
    />
  </td>
  <td>
    <Dropdown
      baseClassName="Dropdown"
      onChange={[Function]}
      options={
        Array [
          0,
          5,
          10,
          15,
          20,
          25,
          30,
          35,
          40,
          45,
          50,
          55,
        ]
      }
      placeholder="Select end minute"
    />
  </td>
  <td>
    <button
      onClick={[Function]}
    >
      Add
    </button>
  </td>
  <div>
    <ReactDataGrid
      cellNavigationMode="none"
      columnEquality={[Function]}
      columns={
        Array [
          Object {
            "key": "number",
            "name": "ID",
          },
          Object {
            "key": "Day",
            "name": "Day",
          },
          Object {
            "key": "StartHour",
            "name": "Start Hour",
          },
          Object {
            "key": "StartMin",
            "name": "Start Minute",
          },
          Object {
            "key": "EndHour",
            "name": "End Hour",
          },
          Object {
            "key": "EndMin",
            "name": "End Minute",
          },
        ]
      }
      editorPortalTarget={<body />}
      enableCellAutoFocus={true}
      enableCellSelect={false}
      enableRowSelect={false}
      headerFiltersHeight={45}
      minColumnWidth={80}
      minHeight={350}
      onBeforeEdit={[Function]}
      overScan={
        Object {
          "colsEnd": 2,
          "colsStart": 2,
          "rowsEnd": 2,
          "rowsStart": 2,
        }
      }
      rowGetter={[Function]}
      rowHeight={35}
      rowKey="id"
      rowScrollTimeout={0}
      rowsCount={0}
      scrollToRowIndex={0}
    />
  </div>
  <div>
    <td>
      <input
        onChange={[Function]}
        type="number"
        value={null}
      />
    </td>
    <td>
      <button
        onClick={[Function]}
      >
        Remove Constraint
      </button>
    </td>
  </div>
  <div
    className="bottom"
    id="option-container"
  >
    <Link
      replace={false}
      to="/"
    >
      <button
        id="save"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </Link>
    <Link
      refresh="true"
      replace={false}
      to="/availability"
    >
      <button
        type="reset"
      >
        Reset
      </button>
    </Link>
    <button
      onClick={[Function]}
    >
      Additional Options
    </button>
  </div>
</div>
`;

exports[`AvailabilityContainer Should render correctly with a menu 1`] = `
<div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select day
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select start hour
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select start minute
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select end hour
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select end minute
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <button>
    Add
  </button>
  <div>
    <div
      class="react-grid-Container"
      style="width:100%"
    >
      <div
        class="react-grid-Main"
      >
        <div
          class="react-grid-Grid"
          style="overflow:hidden;outline:0;position:relative;min-height:350px"
        >
          <div
            class="react-grid-Header"
            height="35"
            style="position:relative;height:35px"
          >
            <div
              class="react-grid-HeaderRow"
              height="35"
              style="position:absolute;top:0;left:0;width:100%;overflow-x:hidden;min-height:auto"
              width="0"
            >
              <div
                style="width:100%;height:35px;white-space:nowrap;overflow-x:hidden;overflow-y:hidden"
              >
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:0;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    ID
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:80px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    Day
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:160px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    Start Hour
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:240px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    Start Minute
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:320px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    End Hour
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:400px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    End Minute
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="react-grid-Viewport"
              style="padding:0;bottom:0;left:0;right:0;overflow:hidden;position:absolute;top:35px"
            >
              <div
                class="react-grid-Canvas"
                style="position:absolute;top:0;left:0;overflow-x:auto;overflow-y:scroll;width:100%;height:315px"
              >
                <div />
                <div
                  style="width:480px"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <input
      type="number"
    />
    <button>
      Remove Constraint
    </button>
  </div>
  <div
    class="bottom"
    id="option-container"
  >
    <a
      href="#/"
    >
      <button
        id="save"
        type="button"
      >
        Save
      </button>
    </a>
    <a
      href="#/availability"
      refresh="true"
    >
      <button
        type="reset"
      >
        Reset
      </button>
    </a>
    <button>
      Additional Options
    </button>
    <div
      class="menu"
    >
      <span
        id="blacklist"
      >
        <div
          class="inputHeader"
        >
          Professor Blacklist
        </div>
        <input
          id="profBlacklist"
          placeholder="Enter Professor Name"
          type="text"
        />
        <button
          form="main"
          id="profButton"
          type="profSave"
        >
          Save
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`AvailabilityContainer Should render correctly without a menu 1`] = `
<div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select day
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select start hour
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select start minute
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select end hour
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <div
    class="Dropdown-root"
  >
    <div
      aria-haspopup="listbox"
      class="Dropdown-control"
    >
      <div
        class="Dropdown-placeholder"
      >
        Select end minute
      </div>
      <div
        class="Dropdown-arrow-wrapper"
      >
        <span
          class="Dropdown-arrow"
        />
      </div>
    </div>
  </div>
  <button>
    Add
  </button>
  <div>
    <div
      class="react-grid-Container"
      style="width:100%"
    >
      <div
        class="react-grid-Main"
      >
        <div
          class="react-grid-Grid"
          style="overflow:hidden;outline:0;position:relative;min-height:350px"
        >
          <div
            class="react-grid-Header"
            height="35"
            style="position:relative;height:35px"
          >
            <div
              class="react-grid-HeaderRow"
              height="35"
              style="position:absolute;top:0;left:0;width:100%;overflow-x:hidden;min-height:auto"
              width="0"
            >
              <div
                style="width:100%;height:35px;white-space:nowrap;overflow-x:hidden;overflow-y:hidden"
              >
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:0;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    ID
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:80px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    Day
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:160px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    Start Hour
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:240px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    Start Minute
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:320px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    End Hour
                  </div>
                </div>
                <div
                  class="react-grid-HeaderCell"
                  style="width:80px;left:400px;display:inline-block;position:absolute;height:35px;margin:0;text-overflow:ellipsis;white-space:nowrap"
                >
                  <div
                    class="widget-HeaderCell__value"
                  >
                    End Minute
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="react-grid-Viewport"
              style="padding:0;bottom:0;left:0;right:0;overflow:hidden;position:absolute;top:35px"
            >
              <div
                class="react-grid-Canvas"
                style="position:absolute;top:0;left:0;overflow-x:auto;overflow-y:scroll;width:100%;height:315px"
              >
                <div />
                <div
                  style="width:480px"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <input
      type="number"
    />
    <button>
      Remove Constraint
    </button>
  </div>
  <div
    class="bottom"
    id="option-container"
  >
    <a
      href="#/"
    >
      <button
        id="save"
        type="button"
      >
        Save
      </button>
    </a>
    <a
      href="#/availability"
      refresh="true"
    >
      <button
        type="reset"
      >
        Reset
      </button>
    </a>
    <button>
      Additional Options
    </button>
  </div>
</div>
`;

exports[`SelectInput Should render correctly 1`] = `
<div
  id="greetingText"
>
  Select your unavailability over a typical school week.
</div>
`;
